SERVER-10673 don't allow validate(true)

Don't allow validate true on indexes (non-normal namespaces).